Add method to create Order